@@ -633,6 +633,7 @@ void buildSpellArray()
 
   discArray[SPELL_RELIVE] = new spellInfo(SPELL_CLERIC, DISC_AEGIS, DISC_AEGIS, STAT_EXT, "relive", TASK_NORMAL, LAG_2, POSITION_SITTING, MANA_0, LIFEFORCE_0, PRAY_300, TAR_CHAR_ROOM, SYMBOL_STRESS_100, "", "", "", "", START_80, LEARN_5, START_DO_50, LEARN_DO_5, START_DO_NO, LEARN_DO_NO, LEARN_DIFF_PRAYERS, 0.02, COMP_GESTURAL | COMP_VERBAL, 0);
 
+  discArray[SPELL_CRUSADE] = new spellInfo(SPELL_CLERIC, DISC_AEGIS, DISC_AEGIS, STAT_WIS, "crusade", TASK_EASY, LAG_2, POSITION_SITTING, MANA_0, LIFEFORCE_0, PRAY_500, TAR_AREA | TAR_IGNORE, SYMBOL_STRESS_45, "", "", "", "", START_80, LEARN_5, START_DO_50, LEARN_DO_5, START_DO_NO, LEARN_DO_NO, LEARN_DIFF_PRAYERS, 0.02, COMP_GESTURAL | COMP_VERBAL, 0);
 
 // disc_hand_of_god
  
